--- a/Dairy_Care_System/templates/custproductslist.html
+++ b/Dairy_Care_System/templates/custproductslist.html
@@ -107,7 +107,7 @@
             </form>
         </div>
         {% empty %}
-            <p>No products available.</p>
+            <p>No top-selling products in the last month.</p>
         {% endfor %}
     </div>
     </div>
