--- a/Dairy_Care_System/templates/home.html
+++ b/Dairy_Care_System/templates/home.html
@@ -52,7 +52,7 @@
             <li><b><a href="{% url 'regmailverify' %}"><i class="fas fa-user-plus"></i> Register</a></b></li>
         </div>
         <div class="nav-item">
-            <li><b><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt"></i> Login</a></b></li>
+            <li><b><a href="{% url 'login' %}" id="login"><i class="fas fa-sign-in-alt"></i> Login</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'contactus' %}"><i class="fas fa-envelope"></i> Contact Us</a></b></li>
