--- a/Dairy_Care_System/templates/deliveryassigns.html
+++ b/Dairy_Care_System/templates/deliveryassigns.html
@@ -23,27 +23,18 @@
         }
 
         .page-header {
-            margin-bottom: 2rem;
             text-align: center;
-            color: #062e72;
+            margin-bottom: 40px;
         }
 
         .page-header h1 {
+            color: #000000;
             font-family: Copperplate, Papyrus, fantasy;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            position: relative; /* To allow absolute positioning of the :after pseudo-element */
-        }
-
-        .page-header h1:after {
-            content: '';
-            display: block;
-            width: 50%;
-            height: 3px;
-            background: linear-gradient(90deg, transparent, #050b6d, transparent);
-            position: absolute;
-            bottom: -2px;
-            left: 25%;
+            font-size: 40px;
+            font-weight: 600;
+            margin: 0;
+            position: relative;
+            display: inline-block;
         }
 
         .page-header p {
