--- a/Dairy_Care_System/templates/userprofile.html
+++ b/Dairy_Care_System/templates/userprofile.html
@@ -370,6 +370,7 @@
                     {% endif %}
                 </p> -->
             
+            <p><i class="icon fas fa-map-marker-alt"></i><strong>Pincode:</strong> {{ user.pincode }}</p>
             <p><i class="icon fas fa-user-tag"></i><strong>Role:</strong> {{ user.get_role_display }}</p>
         </div>
 
