--- a/Dairy_Care_System/templates/farmerproductstock.html
+++ b/Dairy_Care_System/templates/farmerproductstock.html
@@ -56,7 +56,7 @@
             position: absolute;
             bottom: -2px;
             left: 50%;
-            width: 40%;
+            width: 30%;
             height: 3px;
             background: linear-gradient(to right, #c3c4c6, #000000);
             border-radius: 2px;
@@ -126,6 +126,7 @@
     <a href="{% url 'farmerproductstock' %}"><i class="fas fa-boxes"></i>  Stock Details</a><br>
     <a href="{% url 'stocknotification' %}"><i class="fas fa-bell"></i> Notifications</a><br>
     <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
+    <a href="{% url 'farmownerpage' %}"><i class="fas fa-home home-icon"></i> Home</a><br>
 </div>
 
 <!-- Navigation Bar -->
@@ -136,7 +137,6 @@
             <li>
                 <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
-                    <a href="{% url 'farmownerpage' %}"><i class="fas fa-home home-icon"></i> Dashboard</a>
                     <a href="{% url 'userprofile' %}"><i class="fas fa-user"></i> Profile</a>
                     <a href="#" onclick="confirmLogout()"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
